# marketing-house

./: .gitignore  README.md  pyproject.toml
docs/: analytics_modules.md
docs/questionnaires/: architecture.md  business.md  roadmap.md
generator/: data.ipynb
src/: __init__.py  app.py
src/pages/: __init__.py
src/pages/dashboards/: __init__.py  controller.py  customer_value.py  landing.py  sidebar.py
src/pages/dashboards/components/: __init__.py  segmentations.py
src/pages/home/: __init__.py  controller.py  landing.py  sidebar.py
src/pages/reports/: controller.py  landing.py  sidebar.py
src/pages/tools/: controller.py  landing.py  sidebar.py
