[project]
name = "marketing-house"
version = "0.1.0"
description = "Environment for Marketing AI/ML/DL toolkit"
authors = [
    {name = "Gonzalo Alcala",email = "gonzaloalcala0304@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "lifetimes (>=0.11.3,<0.12.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "streamlit (>=1.43.1,<2.0.0)",
    "ruff (>=0.9.10,<0.10.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "sdv (>=1.18.0,<2.0.0)",
    "faker (>=37.0.0,<38.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
